force-app/main/default/objects/vlocity_ins__ClaimantEarning__c/fields/vlocity_ins__ClaimantId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimantId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Claimant, whose earning is represented in this record.</description>
    <label>Claimant</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>vlocity_ins__InsuranceClaimPartyRelationship__c.vlocity_ins__ClaimId__c</field>
            <operation>equals</operation>
            <valueField>$Source.vlocity_ins__ClaimId__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>vlocity_ins__InsuranceClaimPartyRelationship__c</referenceTo>
    <relationshipLabel>Claimant Earnings</relationshipLabel>
    <relationshipName>ClaimantEarnings</relationshipName>
    <type>Lookup</type>
</CustomField>