force-app/main/default/objects/vlocity_ins__ClaimantEarning__c/fields/vlocity_ins__ClaimId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__ClaimId__c</fullName>
    <description>The claim for which this Claimant Earning record is a child of.</description>
    <label>Claim</label>
    <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
    <relationshipLabel>Claimant Earnings</relationshipLabel>
    <relationshipName>ClaimantEarningClaims</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>