force-app/main/default/objects/vlocity_ins__ClaimantEarning__c/fields/vlocity_ins__EndDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__EndDate__c</fullName>
    <description>The end date of the earnings period for this record.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>