force-app/main/default/objects/vlocity_ins__ClaimantEarning__c/fields/vlocity_ins__StartDate__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__StartDate__c</fullName>
    <description>The start date of the earnings period for this record.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>